--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -71,6 +71,7 @@ body {
   padding: 1px 0;
 }
 
+
 #sidebar {
   width: 25%;
   float: right;      
@@ -190,6 +191,19 @@ body {
 
 .pagination a {
   text-decoration: none;  
+}
+
+.addbutton {
+  padding: 1px 0;
+}
+
+.addbutton a, .addbutton span {
+  padding: 0 5px;	
+  display: block;
+  border-style: solid;
+  border-width: 1px;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 /* tables */
