Wire up login logic.

--- a/views/groups.haml
+++ b/views/groups.haml
@@ -3,6 +3,7 @@
 %html
   %head
     %title Gitosysadmin - Groups
+    %link{:rel => 'stylesheet', :href => 'styles/reset.css', :type=> "text/css"}
     %link{:rel => 'stylesheet', :href => "styles/base.css", :type => "text/css"}
     %link{:rel => 'stylesheet', :href => "styles/style.css", :type => "text/css"}
   %body
@@ -16,6 +17,8 @@
               %a{:href => '/'} Main
             %li.active
               %a{:href => '/groups'} Groups
+            %li
+              %a{:href => '/repos'} Repos
             %li 
               %a{:href => '/users'} Users
             %li 
