--- a/views/index.haml
+++ b/views/index.haml
@@ -3,6 +3,7 @@
 %html
   %head
     %title Gitosysadmin
+    %link{:rel => 'stylesheet', :href => 'styles/reset.css', :type=> "text/css"}
     %link{:rel => 'stylesheet', :href => "styles/base.css", :type => "text/css"}
     %link{:rel => 'stylesheet', :href => "styles/style.css", :type => "text/css"}
   %body
