--- a/views/login.haml
+++ b/views/login.haml
@@ -3,16 +3,32 @@
 %html
   %head
     %title Gitosysadmin - Groups
+    %link{:rel => 'stylesheet', :href => 'styles/reset.css', :type=> "text/css"}
     %link{:rel => 'stylesheet', :href => "styles/base.css", :type => "text/css"}
     %link{:rel => 'stylesheet', :href => "styles/style.css", :type => "text/css"}
   %body
-    %div.box
-      %h1 Gitosysadmin Login
-      %div#block-login
-%form{ :action => "/user/login", :method => "post"}
-  %p Name:
-  %input{ :name => "login", :type => "text", :size => "30"}
-  %p Password:
-  %input{ :name => "password", :type => "password", :size => "30"}
-  %br
-  %input{ :name => "submit", :type => "submit", :value => "Submit"}
+    %div#container
+      %div#box
+        %h1 Gitosysadmin Login
+        %div#block-login.block
+          %h2 Login
+          %div.content.login
+            %div.flash
+              %div.message.notice
+                %p Logged in successfully
+            %form.form.login{:action => "/login", :method => "post"}
+              %div.group.wat-cf
+                %div.left
+                  %label.label.right Username
+                %div.right
+                  %input.text_field{:type => "text", :name => "login"}
+              %div.group.wat-cf
+                %div.left
+                  %label.label.right Password
+                %div.right
+                  %input.text_field{:type => "password", :name => "password"}
+              %div.group.navform.wat-cf
+                %div.right
+                  %button.button{:type => "submit"}
+                    %img{:alt => "Checkmark", :src => "/images/icons/tick.png"}
+                    Login
