--- a/views/index.haml
+++ b/views/index.haml
@@ -1,11 +1,6 @@
 %h2.title App
 %div.content
-  %div.flash
-    %div.message.error 
-      %p Error message
-    %div.message.warning 
-      %p Warning message
-    %div.message.notice 
-      %p Notice message
+  = show_flash
+  = show_error
 %div#inner
   %p Stuff goes here.
